tools/crates/vendor/zerocopy/tests/ui-stable/transmute-size-decrease.stderr
error[E0080]: transmuting from 2-byte type to 1-byte type: `AU16` -> `u8`
  --> tests/ui-stable/transmute-size-decrease.rs:20:27
   |
20 | const DECREASE_SIZE: u8 = transmute!(AU16(0));
   |                           ^^^^^^^^^^^^^^^^^^^ evaluation of `DECREASE_SIZE` failed here
   |
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/transmute-size-decrease.rs:20:27
   |
20 | const DECREASE_SIZE: u8 = transmute!(AU16(0));
   |                           ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
